<resources>
    <string name="app_name">Using Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="reg_title">Register</string>
    <string name="p_policy">Privacy Policy</string>
    <string name="required">Field Required</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="phone">Phone #</string>
    <string name="sharedPrefFile">SharedPreferenceFile</string>
</resources>