<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/red_black_brush_stroke_banner_background_perfect_canva__1_"
        android:padding="10dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/sign_up_textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="50dp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/reg_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-smallcaps"
            app:textAllCaps="true" />

        <TextView
            android:id="@+id/name_text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_textView1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:ems="4"
            android:minHeight="40dp"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/username_editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_textView1"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/name_text_view1"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="5dp"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/email_text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_text_view1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:ems="4"
            android:minHeight="40dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/email_editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_editText1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/name_text_view1"
            android:background="@drawable/custom_edit_text_cut"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/pass_text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_text_view1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:ems="4"
            android:minHeight="40dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/password_editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_editText1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/name_text_view1"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="40dp" />

        <ImageButton
            android:id="@+id/password_visibility1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_below="@+id/email_editText1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="57dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/ic_baseline_visibility_24"
            />


        <TextView
            android:id="@+id/phone_text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass_text_view1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:ems="4"
            android:minHeight="40dp"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/phone_editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_editText1"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/name_text_view1"
            android:background="@drawable/custom_edit_text_cut"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawablePadding="5dp"
            android:inputType="phone"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/sign_up_btn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_editText1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:minWidth="120dp"
            android:minHeight="60dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/button_background_color" />

    </RelativeLayout>

</FrameLayout>