<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/red_black_brush_stroke_banner_background_perfect_canva__1_"
        android:padding="10dp"
        android:id="@+id/constraint_lay"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/sign_up_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-smallcaps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="true" />
        <TextView
            android:id="@+id/name_text_view"
            android:text="@string/user_name"
            android:textSize="25sp"
            android:minHeight="40dp"
            android:ems="4"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_textView"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/name_text_view"
            app:layout_constraintTop_toBottomOf="@id/sign_up_textView"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/email_text_view"
            android:text="@string/email"
            android:textSize="25sp"
            android:minHeight="40dp"
            android:ems="4"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/name_text_view"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textEmailAddress"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/email_text_view"
            app:layout_constraintTop_toBottomOf="@id/username_editText"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"/>
        <TextView
            android:id="@+id/password_text_view"
            android:text="@string/password"
            android:textSize="25sp"
            android:minHeight="40dp"
            android:ems="4"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/email_text_view"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/password_text_view"
            app:layout_constraintTop_toBottomOf="@id/email_editText" >
        </EditText>
        <ImageButton
            android:id="@+id/password_visibility"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"

            android:background="@color/white"
            android:src="@drawable/ic_baseline_visibility_24"
            app:layout_constraintHorizontal_bias=".95"
            app:layout_constraintStart_toStartOf="@id/password_editText"
            app:layout_constraintTop_toTopOf="@id/password_editText"
            app:layout_constraintBottom_toBottomOf="@id/password_editText"
            app:layout_constraintEnd_toEndOf="@id/password_editText"/>

        <TextView
            android:id="@+id/phone_text_view"
            android:text="@string/phone"
            android:textSize="25sp"
            android:minHeight="40dp"
            android:ems="4"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/password_text_view"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/phone_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_edit_text_cut"
            android:inputType="phone"
            android:minHeight="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/phone_text_view"
            app:layout_constraintTop_toBottomOf="@id/password_editText"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawablePadding="5dp"/>
        <Button
            android:id="@+id/sign_up_btn"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:minHeight="60dp"
            android:minWidth="120dp"
            app:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/phone_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>